Fix equal deg, don't draw invisible vector arrows

--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,7 @@ a {
 	background-color: #ffffff;
 	width: 500px;
 	border: 3px solid var(--footer);
-	margin-bottom: 5px;
+	margin-bottom: 10px;
 }
 
 canvas {
